<resources>
    <string name="deeplink_purchase">nextroom://main/purchase</string>
    <string name="app_name">넥스트룸</string>
    <string name="blank"> </string>
    <string name="common_input">입력</string>
    <string name="common_hint">힌트</string>
    <string name="common_hint_eng">Hint</string>
    <string name="common_not_exists">없음</string>
    <string name="link_signup">https://nextroom.co.kr/signup</string>
    <string name="link_privacy_policy">https://nextroom-official.notion.site/38c311947d1d80618e61dfae7ad5d42b</string>
    <string name="link_service_terms">https://nextroom-official.notion.site/3be311947d1d8070b4c0dccd390912bf</string>
    <string name="link_official_instagram">https://www.instagram.com/team_nextroom/</string>
    <string name="link_usage_guide">https://nextroom-official.notion.site/38c311947d1d806cb862fe2510c3c6f4</string>
    <string name="link_notice">https://nextroom-official.notion.site/38c311947d1d8042b4ecdff3e4a5148f</string>
    <string name="link_play_store_subscriptions">https://play.google.com/store/account/subscriptions?sku=%1$s&amp;package=%2$s</string>
    <string name="error_network">네트워크 연결상태를 확인해주세요</string>
    <string name="error_something">일시적인 오류입니다. 관리자에게 문의해 주세요.</string>
    <string name="error_refresh_token_expired_message">인증이 만료되었습니다. 다시 로그인해 주세요.</string>
    <string-array name="signup_source">
        <item>네이버 검색</item>
        <item>구글 검색</item>
        <item>네이버 카페(오프라인 방탈출)</item>
        <item>지인 추천</item>
        <item>홍보물</item>
        <item>기타</item>
    </string-array>
    <string-array name="signup_reason">
        <item>운영 중인 매장에 도입하기 위해</item>
        <item>오픈 예정인 매장에 도입하기 위해</item>
        <item>학교 혹은 공공기관에서 이벤트성으로 사용</item>
        <item>기타</item>
    </string-array>
    <string name="sign_up">회원가입</string>
    <string name="dialog_yes">예</string>
    <string name="dialog_no">아니오</string>
    <string name="dialog_close">닫기</string>
    <string name="dialog_image_description">다이얼로그의 이미지</string>
    <string name="dialog_free_plan_message">만료된 계정은 유예기간 후 초기화 됩니다.</string>
    <string name="dialog_free_plan_title">무료 체험기간이 %d일 남았어요</string>
    <string name="dialog_subscribe_button">구독하기</string>
    <string name="dialog_noti">안내</string>
    <string name="dialog_update_message">원활한 서비스 이용을 위해\n업데이트가 필요합니다.</string>
    <string name="dialog_app_finish">종료</string>
    <string name="dialog_update">업데이트</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="memo_button">MEMO</string>
    <string name="memo_erase_all_description">모두 지우기</string>
    <string name="memo_pen_description">그리기</string>
    <string name="memo_eraser_description">지우개</string>
    <string name="text_kakao_cs_underline">카카오로 문의하기</string>
    <string name="text_notice">공지사항</string>
    <string name="text_customer_service">문의하기</string>
    <string name="admin_main_update_hint">관리자 웹 사이트에서 힌트를 업데이트 했다면 반드시 업데이트 버튼을 눌러주세요!</string>
    <string name="admin_main_themes_label">우리 지점의 테마 목록</string>
    <string name="admin_main_shop_name_label">우리 매장은</string>
    <string name="admin_main_updated_at">최근 업데이트 일 : %s</string>
    <string name="admin_main_empty_theme_guide">관리자 페이지에서\n테마를 추가해주세요!</string>
    <string name="login_description">이메일과 비밀번호를 입력해주세요</string>
    <string name="login_admin_email_hint">이메일</string>
    <string name="login_password_hint">비밀번호</string>
    <string name="login_button">Login</string>
    <string name="logout_button">로그아웃</string>
    <string name="logout_button_description">로그아웃</string>
    <string name="update_button_description">테마 업데이트</string>
    <string name="resign_dialog_title">탈퇴하시겠습니까?</string>
    <string name="resign_dialog_message">계정을 삭제하면 회원님의 테마 정보는 즉시 삭제되며, 삭제된 정보는 복구할 수 없습니다. 정말 탈퇴하시겠습니까?</string>
    <string name="resign">탈퇴</string>
    <string name="text_user_resign">회원탈퇴</string>
    <string name="resign_success_message">탈퇴가 완료되었습니다</string>
    <string name="resign_blocked_dialog_title">구독 종료 후 탈퇴할 수 있어요</string>
    <string name="resign_blocked_dialog_message">현재 구독 중이라 탈퇴할 수 없어요. 남은 이용 기간이 끝난 뒤 탈퇴하실 수 있어요.</string>
    <string name="manage_subscription">구독 관리</string>
    <string name="game_main_exit_dialog">방탈출을 종료하시겠습니까?</string>
    <string name="game_main_exit_dialog_message">종료하시면 모든 기록은 초기화됩니다.</string>
    <string name="game_finished">게임이 종료되었습니다</string>
    <string name="game_view_hint">힌트 보기</string>
    <string name="game_view_answer">정답 보기</string>
    <string name="text_open_answer_guide_message">정답을 보려면 클릭하세요!</string>
    <string name="game_wrong_hint_code">힌트 코드를 잘못 입력했습니다</string>
    <string name="game_hint_limit_exceed">사용 가능한 힌트 개수를 초과했습니다.</string>
    <string name="game_hint_code_label">Hint Code</string>
    <string name="game_exit_button_description">게임 종료 버튼</string>
    <string name="game_memo_button_description">메모하기</string>
    <string name="game_input_hint_label">힌트 코드 입력</string>
    <string name="game_input_hint_hint">4자리 숫자를 입력해주세요</string>
    <string name="game_hint_button_show_answer">정답보기</string>
    <string name="game_hint_button_goto_home">홈으로</string>
    <string name="game_progress_rate">문제 진행률</string>
    <string name="game_answer">정답</string>
    <string name="toolbar_navigate_back_description">뒤로가기</string>
    <string name="game_backspace_description">지우기</string>
    <string name="onboarding_title">힌트폰 서비스 넥스트룸</string>
    <string name="onboarding_description">방탈출 운영을 편리하게</string>
    <string name="onboarding_apply_free_trial">계정 신청하기</string>
    <string name="onboarding_existing_user_guide">이미 기존 회원이라면? <font color='#FFFFFF'><b>로그인</b></font></string>
    <string name="purchase_ticket">이용권 구매</string>
    <string name="purchase_change_ticket">이용권 변경</string>
    <string name="purchase_main_label_normal">방탈출 1인 가격보다,\n최저시급보다 저렴하게</string>
    <string name="purchase_title">멤버십 회원을 위한 기능이 업데이트 될 예정입니다</string>
    <string name="purchase_description">새로운 기능이 생기기 전까지 넥스트룸 운영을 위해 후원해주세요</string>
    <string name="purchase_main_label_subscribe_end">구독이 만료되었어요</string>
    <string name="purchase_main_label_free_end">무료 체험기간이 끝났어요</string>
    <string name="purchase_sub_label_subscribe_end">다시 구독하시면 저장하신 정보 그대로 사용할 수 있어요!</string>
    <string name="purchase_sub_label_free_end">지금 구독하시면 저장하신 정보 그대로 사용할 수 있어요!</string>
    <string name="purchase_price_alert">추후 금액이 인상될 수 있습니다.</string>
    <string name="purchase_success_button">돌아가기</string>
    <string name="purchase_success_title">결제가 완료되었어요</string>
    <string name="purchase_success_content">지금 바로 넥스트룸을 사용해보세요</string>
    <string name="purchase_error_message">일시적인 오류이거나 서비스 장애입니다. 다시 시도하여도 해당 메시지가 계속 보일 경우 상태 코드와 함께 문의 바랍니다.\n상태 코드: %d</string>
    <string name="expire_period">구독 기간</string>
    <string name="subscription_status">구독 상태</string>
    <string name="subscription_info">구독 정보</string>
    <string name="mypage_title">매장 정보</string>
    <string name="ticket_origin_price">%d원</string>
    <string name="ticket_sell_price">%d원/월</string>
    <string name="ticket_subscribing">구독중</string>
    <string name="ticket_not_subscribe">구독하지 않음</string>
    <string name="ticket_subscribe">구독하기</string>
    <string name="subscribe">구독</string>
    <string name="per_month">/월</string>
    <string name="discount_rate">%d%%</string>
    <string name="date_range_format">%s ~ %s</string>
    <string name="image_viewer_title_format">사진(%s / %s)</string>
    <string name="email_save_title">이메일 저장</string>
    <string name="start">시작</string>
    <string name="dialog_title_game_start_confirm">게임을 시작하시겠습니까?</string>
    <string name="dialog_message_game_start_confirm">버튼을 클릭하면 타이머가 시작됩니다</string>
    <string name="text_confirm">확인</string>
    <string name="tv_theme">테마</string>
    <string name="text_background_setting">배경 설정</string>
    <string name="text_manage_themes">테마 관리</string>
    <string name="theme_manage_title">테마 관리</string>
    <string name="theme_manage_add">테마 추가</string>
    <string name="theme_manage_edit">테마 수정</string>
    <string name="theme_manage_delete_confirm">테마를 정말 삭제하시겠습니까?</string>
    <string name="theme_manage_delete_confirm_desc">삭제된 테마는 복구할 수 없습니다.</string>
    <string name="theme_manage_save_success">저장되었습니다.</string>
    <string name="theme_manage_delete_success">삭제되었습니다.</string>
    <string name="hint_manage_title">힌트 관리</string>
    <string name="hint_manage_add">힌트 추가</string>
    <string name="hint_manage_edit">힌트 수정</string>
    <string name="hint_manage_save_success">저장되었습니다.</string>
    <string name="hint_manage_delete_confirm">힌트를 삭제하시겠습니까?</string>
    <string name="hint_manage_delete_success">삭제되었습니다.</string>
    <string name="text_last_hint_update">최근 힌트 업데이트 %s</string>
    <string name="text_last_hint_update_fail">최근 힌트 업데이트를 불러오지 못했습니다.</string>
    <string name="text_timer_background_custom">타이머 배경 설정</string>
    <string name="text_background_custom_info_1">PC에서 배경을 등록하면 힌트폰에서 확인할 수 있습니다.</string>
    <string name="text_background_custom_info_2">미리보기에서 이미지의 어두움와 위치를 조정할 수 있습니다.</string>
    <string name="text_theme_manage_web_info">PC에서도 관리할 수 있습니다</string>
    <string name="text_nextroom_subscribe_title">넥스트룸을 구독해보세요✨</string>
    <string name="text_subscribe_benefit_desc">미구독계정은 1개의 배경이미지만 활성화할 수 있습니다.\n넥스트룸을 구독하면 아래 혜택을 누릴 수 있습니다.</string>
    <string name="text_subscribe_monthly_payment">월 ₩%s원으로 구독하기</string>
    <string name="text_do_later">다음에 할게요</string>
    <string name="text_empty_image">등록 이미지가\n없습니다</string>
    <string name="text_upload_image_first">PC에서 이미지를 등록해주세요.</string>
    <string name="text_background_setting_error">등록된 이미지가 없어 배경을 활성화할 수 없습니다.</string>
    <string name="text_image_error">이미지를 로드할 수 없습니다.\n직원에게 문의해 주세요.</string>
    <string name="save">저장</string>
    <string name="expand_or_collapse">손가락을 이용해 이미지를\n확대, 축소, 이동할 수 있습니다.</string>
    <string name="dark_level">어두움</string>
    <string name="apply_real_screen">실제 적용 화면으로 보기</string>
    <string name="save_success">저장됐습니다.</string>
    <string name="text_input_password_header">비밀번호 입력</string>
    <string name="text_input_password_description">앱 비밀번호를 입력해주세요.</string>
    <string name="text_incorrect_password_error_message">비밀번호가 일치하지 않습니다.</string>
    <string name="text_set_password">비밀번호 설정</string>
    <string name="text_confirm_password">비밀번호 확인</string>
    <string name="text_set_password_description">앱 비밀번호를 입력해주세요.</string>
    <string name="text_set_password_description_for_confirm">확인을 위해 한번 더 입력해 주세요.</string>
    <string name="text_set_password_succeed">비밀번호 설정이 완료되었습니다.</string>
    <string name="text_change_app_password">앱 비밀번호 변경</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4">4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7">7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
    <string name="text_0">0</string>
    <string name="text_need_to_set_password_title">안내</string>
    <string name="text_need_to_set_password_message">관리자만 사용할 수 있도록\n비밀번호 설정이 필요합니다.</string>
    <string name="text_move_to_setting">설정하기</string>
    <string name="text_finger_print_auth">지문 인증</string>
    <string name="text_prompt_fingerprint">지문을 입력하세요.</string>
    <string name="text_cancel">취소</string>
    <string name="text_delete">삭제</string>
    <string name="text_biometric_error_message">지문 인증에 실패했습니다.</string>
    <string name="subscribe_beneft_first_title">구독혜택 1.</string>
    <string name="subscribe_benefit_first_desc">힌트와 이미지를 함께 제공</string>
    <string name="subscribe_benefit_first_sub_desc">힌트 이미지 삽입!</string>
    <string name="subscribe_beneft_second_title">구독혜택 2.</string>
    <string name="subscribe_benefit_second_desc">우리 매장만의 특별한 테마</string>
    <string name="text_start_with_google">구글로 시작하기</string>
    <string name="text_login">로그인</string>
    <string name="text_email_login">이메일 로그인</string>
</resources>