<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark01"
    tools:context=".ui.password.CheckPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_keypad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/tv_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:text="@string/text_input_password_header"
        android:textAppearance="@style/Poppins.24"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_input_password_description"
        android:textAppearance="@style/Pretendard.16.Bold"
        android:textColor="@color/Gray01"
        app:layout_constraintBottom_toTopOf="@id/custom_code_input"
        app:layout_constraintEnd_toEndOf="@id/tv_header"
        app:layout_constraintStart_toStartOf="@id/tv_header"
        app:layout_constraintTop_toBottomOf="@id/tv_header" />

    <com.nextroom.nextroom.presentation.customview.CodeInputView
        android:id="@+id/custom_code_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@id/guide_keypad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_description" />

    <TextView
        android:id="@+id/tv_key_1"
        style="@style/Keypad"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/text_1"
        app:layout_constraintBottom_toTopOf="@id/tv_key_4"
        app:layout_constraintEnd_toStartOf="@id/tv_key_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guide_keypad"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_2"
        style="@style/Keypad"
        android:text="@string/text_2"
        app:layout_constraintBottom_toBottomOf="@id/tv_key_1"
        app:layout_constraintEnd_toStartOf="@id/tv_key_3"
        app:layout_constraintStart_toEndOf="@id/tv_key_1"
        app:layout_constraintTop_toTopOf="@id/tv_key_1"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_3"
        style="@style/Keypad"
        android:layout_marginEnd="20dp"
        android:text="@string/text_3"
        app:layout_constraintBottom_toBottomOf="@id/tv_key_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_key_2"
        app:layout_constraintTop_toTopOf="@id/tv_key_1"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_4"
        style="@style/Keypad"
        android:text="@string/text_4"
        app:layout_constraintBottom_toTopOf="@id/tv_key_7"
        app:layout_constraintEnd_toStartOf="@id/tv_key_5"
        app:layout_constraintStart_toStartOf="@id/tv_key_1"
        app:layout_constraintTop_toBottomOf="@id/tv_key_1"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_5"
        style="@style/Keypad"
        android:text="@string/text_5"
        app:layout_constraintBottom_toBottomOf="@id/tv_key_4"
        app:layout_constraintEnd_toStartOf="@id/tv_key_6"
        app:layout_constraintStart_toEndOf="@id/tv_key_4"
        app:layout_constraintTop_toTopOf="@id/tv_key_4"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_6"
        style="@style/Keypad"
        android:text="@string/text_6"
        app:layout_constraintBottom_toBottomOf="@id/tv_key_4"
        app:layout_constraintEnd_toEndOf="@id/tv_key_3"
        app:layout_constraintStart_toEndOf="@id/tv_key_5"
        app:layout_constraintTop_toTopOf="@id/tv_key_4"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_7"
        style="@style/Keypad"
        android:text="@string/text_7"
        app:layout_constraintBottom_toTopOf="@id/tv_key_0"
        app:layout_constraintEnd_toStartOf="@id/tv_key_8"
        app:layout_constraintStart_toStartOf="@id/tv_key_1"
        app:layout_constraintTop_toBottomOf="@id/tv_key_4"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_8"
        style="@style/Keypad"
        android:text="@string/text_8"
        app:layout_constraintBottom_toBottomOf="@id/tv_key_7"
        app:layout_constraintEnd_toStartOf="@id/tv_key_9"
        app:layout_constraintStart_toEndOf="@id/tv_key_7"
        app:layout_constraintTop_toTopOf="@id/tv_key_7"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_9"
        style="@style/Keypad"
        android:text="@string/text_9"
        app:layout_constraintBottom_toBottomOf="@id/tv_key_7"
        app:layout_constraintEnd_toEndOf="@id/tv_key_3"
        app:layout_constraintStart_toEndOf="@id/tv_key_8"
        app:layout_constraintTop_toTopOf="@id/tv_key_7"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_key_0"
        style="@style/Keypad"
        android:layout_marginBottom="42dp"
        android:text="@string/text_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tv_key_8"
        app:layout_constraintStart_toStartOf="@id/tv_key_8"
        app:layout_constraintTop_toBottomOf="@id/tv_key_7"
        tools:ignore="HardcodedText" />

    <FrameLayout
        android:id="@+id/key_backspace"
        style="@style/Keypad"
        app:layout_constraintBottom_toBottomOf="@id/tv_key_0"
        app:layout_constraintEnd_toEndOf="@id/tv_key_9"
        app:layout_constraintStart_toEndOf="@id/tv_key_0"
        app:layout_constraintTop_toTopOf="@id/tv_key_0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/game_backspace_description"
            android:src="@drawable/ic_backspace" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>