<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark01">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/toolbar_navigate_back_description"
        android:focusable="true"
        android:padding="20dp"
        android:src="@drawable/ic_navigate_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/Pretendard.20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email_login"
        app:layout_constraintBottom_toBottomOf="@id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_back" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:alpha="0.4"
        android:importantForAccessibility="no"
        android:src="@drawable/bg_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/login_admin_email_hint"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/Pretendard.16"
        android:textColor="@color/White"
        android:textColorHint="@color/Gray01"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/iv_back" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textAppearance="@style/Pretendard.16"
        android:textColor="@color/White"
        android:textColorHint="@color/Gray01"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <CheckBox
        android:id="@+id/cb_id_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email_save_title"
        android:textColor="@color/Gray01"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <TextView
        android:id="@+id/tv_email_login"
        style="@style/Pretendard.16.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/bg_white_border_r_100"
        android:gravity="center"
        android:paddingVertical="20dp"
        android:text="@string/text_login"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/cb_id_save" />

    <LinearLayout
        android:id="@+id/ll_google_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_black_border_white20_r_100"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/tv_email_login">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_google" />

        <TextView
            style="@style/Pretendard.16.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_start_with_google"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_customer_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/text_customer_service"
        android:textAppearance="@style/Pretendard.12"
        android:textColor="@color/color_gray01_text_button"
        app:layout_constraintEnd_toStartOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/ll_google_login" />

    <View
        android:id="@+id/divider"
        android:layout_width="1dp"
        android:layout_height="12dp"
        android:background="@color/Gray02"
        app:layout_constraintBottom_toBottomOf="@id/tv_customer_service"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="@id/tv_customer_service" />

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        android:text="@string/sign_up"
        android:textAppearance="@style/Pretendard.12"
        android:textColor="@color/color_gray01_text_button"
        app:layout_constraintStart_toEndOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/ll_google_login" />

    <com.nextroom.nextroom.presentation.common.NRLoading
        android:id="@+id/pb_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>