<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/tb_memo"
        layout="@layout/common_toolbar" />

    <com.nextroom.nextroom.presentation.customview.PainterView
        android:id="@+id/custom_painter_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_memo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <ImageView
        android:id="@+id/iv_pen_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/memo_pen_description"
        android:src="@drawable/ic_pen"
        app:layout_constraintBottom_toTopOf="@id/iv_eraser_button"
        app:layout_constraintEnd_toEndOf="@id/guide_end" />

    <ImageView
        android:id="@+id/iv_eraser_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/memo_eraser_description"
        android:src="@drawable/ic_eraser"
        app:layout_constraintBottom_toTopOf="@id/iv_erase_all_button"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        tools:text="지우개" />

    <ImageView
        android:id="@+id/iv_erase_all_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="60dp"
        android:contentDescription="@string/memo_erase_all_description"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_end" />
</androidx.constraintlayout.widget.ConstraintLayout>