<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Dark01">

    <TextView
        android:id="@+id/tv_title"
        style="@style/Pretendard.32.bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/purchase_success_title"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_content"
        style="@style/Pretendard.20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/purchase_success_content"
        android:textColor="@color/White"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <ImageView
        android:id="@+id/iv_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:importantForAccessibility="no"
        android:src="@drawable/coin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:importantForAccessibility="no"
        android:src="@drawable/coin"
        app:layout_constraintBottom_toBottomOf="@id/iv_coin"
        app:layout_constraintEnd_toStartOf="@id/iv_coin"
        app:layout_constraintTop_toTopOf="@id/iv_coin" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:importantForAccessibility="no"
        android:src="@drawable/coin"
        app:layout_constraintBottom_toBottomOf="@id/iv_coin"
        app:layout_constraintStart_toEndOf="@id/iv_coin"
        app:layout_constraintTop_toTopOf="@id/iv_coin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home"
        style="@style/Button.Kor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="48dp"
        android:text="@string/purchase_success_button"
        android:textColor="@color/Dark01"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>